--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
+  padding: 10px;
 }
 
 .logo {
@@ -12,14 +17,20 @@
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 a {
+  margin: 0;
   font-size: 22px;
   background: white;
-  padding: 8px;
+  padding: 4px;
   /* this removes the line under the links */
   text-decoration: none;
 }
