--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,10 +12,15 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8px;
 }
 
 .profile-image {
   background: rebeccapurple;
+  justify-self: end;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
@@ -31,6 +36,7 @@ body {
 
 button {
   border: none;
+  justify-self: end;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
@@ -45,4 +51,13 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+  justify-content: space-evenly;
+}
+
+.left,.right{
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
