--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -8,8 +8,18 @@ img {
 }
 
 .title {
+  margin: 32px auto;
+  text-align: center;
   font-size: 36px;
   font-weight: 900;
+}
+.container{
+  display: flex;
+  text-align: center;
+  gap: 52px;
+}
+.fruit{
+  width: 200px;
 }
 
 /* do not edit this footer */
