--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,8 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 10px;
+  display: flex;
+  gap: 10px;
 }
-
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,6 +35,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+.head{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.header{
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .close-button {
@@ -43,14 +57,13 @@ body {
   font-size: 16px;
   height: 24px;
   width: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-top: -2px;
 }
 
 button {
+  margin-top: 10px;
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
