--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,22 +2,48 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
-.header {
+.header { 
   height: 72px;
   background: darkmagenta;
   color: white;
 }
+.hero{
+  display: flex;
+  gap: 20px;
+  align-items: space-between;
+}
+
+.hero .sidebar{
+  width: 300px;
+}
+
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-content: center;
+}
+.cards div{
+  width: 300px;
+}
 
 .footer {
+  text-align: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
 
 .sidebar {
-  width: 300px;
+  flex: 0 0 auto;
+  width: 200px;
   background: royalblue;
   box-sizing: border-box;
 }
@@ -26,4 +52,13 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+ul{
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+}
+a{
+  color: white;
+  text-decoration: none;
 }
