--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -4,7 +4,6 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   box-sizing: border-box;
 }
 
@@ -14,16 +13,18 @@ body {
   color: white;
 }
 .hero{
+  flex-grow: 1;
   display: flex;
   gap: 20px;
-  align-items: space-between;
 }
 
 .hero .sidebar{
+  flex-shrink: 0;
   width: 300px;
 }
 
 .cards{
+  margin: 20px;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
