--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -1,48 +1,56 @@
 body,
 html {
-  height: 100%;
-  margin: 0;
+	height: 100dvh;
+	margin: 0;
 }
 
 .container {
-  text-align: center;
-  height: 100%;
-  padding: 16px;
-  box-sizing: border-box;
+	text-align: center;
+	height: 100%;
+	padding: 16px;
+	box-sizing: border-box;
+	display: grid;
+	grid-template: 12.5% 12.5% 62.5% 12.5% / 25% 75%;
+	gap: 15px;
 }
 
 .container div {
-  padding: 15px;
-  font-size: 32px;
-  font-family: Helvetica;
-  font-weight: bold;
-  color: white;
-  border-radius: 15px;
+	padding: 15px;
+	font-size: 32px;
+	font-family: Helvetica;
+	font-weight: bold;
+	color: white;
+	border-radius: 15px;
 }
 
 .header {
-  background-color: #006157;
+	background-color: #006157;
+	grid-row: 1 / 1;
+	grid-column: 1 / span 2;
 }
 
 .sidebar {
-  background-color: #005B94;
+	background-color: #005b94;
+	grid-area: 2/1 / span 2/ 1;
 }
 
 .nav {
-  background-color: #642cde;
+	background-color: #642cde;
+	grid-area: 2/2 / span 1 / span 1;
 }
 
 .article {
-  background-color: #7E1DC3;
+	background-color: #7e1dc3;
 }
 
 .footer {
-  background-color: #393f4d;
+	background-color: #393f4d;
+	grid-area: 4 / 1 / span 1 / span 2;
 }
 
 .article p {
-  font-size: 18px;
-  font-family: sans-serif;
-  color: white;
-  text-align: left;
+	font-size: 18px;
+	font-family: sans-serif;
+	color: white;
+	text-align: left;
 }
