--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -1,91 +1,131 @@
 * {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 .container {
-  text-align: center;
+	text-align: center;
+	display: grid;
+	grid-template-columns: 1fr 4fr;
+	gap: 4px;
 }
 
 .container div {
-  padding: 15px;
-  font-size: 32px;
-  font-family: Helvetica;
-  font-weight: bold;
-  color: white;
+	padding: 15px;
+	font-size: 32px;
+	font-family: Helvetica;
+	font-weight: bold;
+	color: white;
 }
 
 .header {
-  background-color: #393f4d;
+	background-color: #393f4d;
+	grid-column: span 2;
+	display: grid;
+	grid-template-columns: 1fr 4fr;
+}
+.header .logo {
+	text-align: left;
+	font-size: 24px;
+	padding-left: 20px;
 }
 
 .menu ul,
 .menu li {
-  font-size: 16px;
+	font-size: 16px;
+}
+
+li {
+	list-style: none;
+}
+ul {
+	display: grid;
+}
+.menu ul {
+	display: grid;
+	grid-template-columns: repeat(4, minmax(100px, 1fr));
+	gap: 10px;
+	text-align: center;
+	padding-left: 20px;
 }
 
 .sidebar {
-  background-color: #C50208;
+	background-color: #c50208;
+	display: grid;
+	gap: 50px;
+	grid-row: span 2;
 }
 
 .sidebar .photo {
-  background-color: white;
-  color: black;
-  font-size: 12px;
-  font-weight: normal;
-  border-radius: 10px;
+	background-color: white;
+	color: black;
+	font-size: 12px;
+	font-weight: normal;
+	border-radius: 10px;
+	align-items: center;
 }
 
-
 .sidebar .side-content {
-  background-color: white;
-  color: black;
-  font-size: 16px;
-  font-weight: normal;
+	background-color: white;
+	color: black;
+	font-size: 16px;
+	font-weight: normal;
+	align-items: center;
 }
 
 .nav {
-  background-color: #C50208;
+	background-color: #c50208;
 }
 
 .nav ul li {
-  font-size: 16px;
-  text-transform: uppercase;
+	font-size: 16px;
+	text-transform: uppercase;
+}
+
+.nav ul {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 
 .article {
-  background-color: #bccbde;
+	background-color: #bccbde;
+	display: grid;
+	gap: 20px;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
 .article p {
-  font-size: 18px;
-  font-family: sans-serif;
-  color: white;
-  text-align: left;
+	font-size: 18px;
+	font-family: sans-serif;
+	color: white;
+	text-align: left;
 }
 
 .article .card {
-  background-color: #FFFFFF;
-  color: black;
-  text-align: center;
+	background-color: #ffffff;
+	color: black;
+	text-align: center;
+	height: 200px;
 }
 
 .card p {
-  color: black;
-  font-weight: normal;
-  font-size: 14px;
+	color: black;
+	font-weight: normal;
+	font-size: 14px;
+	padding: 5px;
 }
 
 .card .title {
-  font-size: 18px;
-  text-align: center;
+	font-size: 18px;
+	text-align: center;
 }
 
 .footer {
-  background-color: #393f4d;
+	background-color: #393f4d;
+	grid-column: span 2;
 }
 
 .footer p {
-  font-size: 13px;
-  font-weight: normal;
+	font-size: 13px;
+	font-weight: normal;
 }
